--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,5 +1,42 @@
-@media ( min-width: 1919px )
-    .container 
+@media (max-width: 1920px )
+    .container
         margin: 0 104px 0 104px
-        width: 1712px
-        
+        max-width: 1712px
+    .table
+        width: 1133px
+        min-height: 912px
+        &_subtitle
+            width: 1053px
+        &_items
+            width: 1053px
+    .card
+        &_wrapper
+            width: 410px
+            height: 632px
+    .input_name
+        width: 410px
+
+@media (max-width: 1919px)
+    .main
+        display: flex
+        justify-content: center
+    .container
+        margin: 0 104px 0 104px
+        width: 1232px
+
+    .table
+        width: 813px
+        min-height: 632px
+        &_subtitle
+            width: 733px
+        &_items
+            width: 733px
+    .card
+        &_wrapper
+            width: 290px
+            height: 632px
+    .input_name
+        width: 290px
+    .iti-mobile .iti__country-list
+        max-height: 100%
+        width: 238.5px
