--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,5 +1,3 @@
-.container
-    height: 1000px
 
 .main_wrapper
     display: flex
@@ -7,31 +5,32 @@
 
 .table
     background-color: #FAFAFA
-    width: 1133px
-    min-height: 912px
     margin: 76px 0 76px 0
     border-radius: 24px
     padding: 32px 40px 168px 40px
     &_title
         font-size: 24px
         margin-bottom: 24px
+        font-family: "GolosTextWebRegular"
         font-weight: 400
     &_subtitle
         display: grid
         grid-template-columns: repeat(2, 0.5fr) repeat(2, 80px) 56px
         grid-template-rows: repeat(18, auto)
-        width: 1053px
         &_item
-            font-weight: 600
+            font-family: "GolosTextWebMedium"
+            font-weight: 500
             font-size: 13px
             padding: 6px 16px 6px 16px
-    .table_items
+            color: #404040
+    &_items
         background-color: #fff
         display: grid
         grid-template-columns: repeat(2, 0.5fr) repeat(2, 80px) 56px
         grid-template-rows: repeat(18, auto)
-        width: 1053px
     .item
+        font-family: "GolosTextWebRegular"
+        font-weight: 400
         color: #404040
         font-size: 13px
         line-height: 16px
@@ -46,12 +45,11 @@
         display: flex
         flex-direction: column
         margin-top: 224px
-        width: 410px
-        height: 632px
         .subtitle
-            font-weight: 600
             font-size: 16px
             color: #262626
+            font-family: "GolosTextWebMedium"
+            font-weight: 500
         .phone_name
             display: flex
             flex-direction: column
@@ -62,21 +60,23 @@
                 margin-bottom: 24px
                 border-radius: 16px
                 height: 40px
-                border: 1px solid black
+                border: none
                 padding: 0 16px 0 16px
-                color: #808080
-                font-size: 16px
-            .input_name
-                border: 2px solid #ccc
-            .input_name:hover
-                border: 2px solid #FFEEAB
-                color: #808080
-            .input_name:focus
-                border: 2px solid #ffeeab
-                outline: none
                 color: #404040
+                font-size: 16px
+                box-shadow: 0 0 0 1px rgba(0,0,0,0.1 )
+            input::placeholder
+                font-family: "GolosTextWebRegular"
+                font-weight: 400
+                font-size: 16px
+            .input_name:focus
+                box-shadow: 0 0 0 2px #FFEEAB
+                outline: none
+
             input:last-child
                 margin-bottom: 0px
+            input:hover
+                box-shadow: 0 0 0 2px #FFEEAB
 
         .radio_checkboxes
             display: flex
@@ -91,20 +91,31 @@
                 display: flex
                 flex-direction: column
                 margin-bottom: 24px
-                .gender_male
+                font-family: "GolosTextWebRegular"
+                font-weight: 400
+                color: #404040
+                .custom-radio
                     margin-bottom: 8px
-            .gender_male:focus
-                background-color: red
-
+                .custom-radio:last-child
+                    margin-bottom: 0
         .checkboxes
             display: flex
             flex-direction: column
+            .subtitle
+                font-size: 16px
+                color: #262626
+                font-family: "GolosTextWebMedium"
+                font-weight: 500
             label
-                margin-right: 10px
                 margin-bottom: 4px
+            label:last-child
+                margin-bottom: 0
+            span
+                font-family: "GolosTextWebRegular"
+                font-weight: 400
+                color: #404040
             input[type="checkbox"]
                 margin-right: 8px
-
         .btn
             display: flex
             justify-content: center
@@ -114,11 +125,32 @@
             height: 40px
             border: none
             background-color: #FFCB00
-            svg
+            color: #262626
+            font-family: "GolosTextWebMedium"
+            font-weight: 500
+            .arrow
                 margin-left: 8px
-        .btn:hover
-            border: 3px solid #FFEEAB
-            color: white
-            svg:hover
-                fill: #fff
+            .arrow path
+                stroke: black
+            &:hover .arrow path
                 stroke: white
+        .btn:hover
+            box-shadow: 0 0 0 2px #FFEEAB
+            color: white
+            outline: none
+        .btn:focus
+            box-shadow: 0 0 0 2px #FFEEAB
+            outline: none
+
+.iti__selected-flag
+    border-radius: 16px
+.iti--separate-dial-code .iti__selected-flag
+    background-color: white
+    outline: none
+.iti--separate-dial-code .iti__selected-flag:focus
+    box-shadow: 0 0 0 2px #FFEEAB
+
+.iti--separate-dial-code .iti__selected-dial-code
+    color: #404040
+    font-family: "GolosTextWebRegular"
+    font-weight: 400
