--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,8 @@
 *
-    box-sizing: border-box
-    padding: 0
-    margin: 0
+  box-sizing: border-box
+  padding: 0
+  margin: 0
 
 @import "_media"
 @import "_general"
-
-html 
-  font-family: GolosText, sans-serif
+@import "_checkbox_radio"
