--- a/sass/_checkbox_radio.sass
+++ b/sass/_checkbox_radio.sass
@@ -23,31 +23,28 @@
       background-position: center center
       background-size: 50% 50%
 
-  input
-    &:not(:disabled)
-      &:not(:checked) + span:hover::before
-        border-color: #D6D6D6
-        box-shadow: 0 0 0 2px #FFEEAB
+  input:not(:disabled) + span:hover::before,
+  input:checked + span:hover::before
+    border-color: #D6D6D6
+    box-shadow: 0 0 0 2px #FFEEAB
 
-      &:active + span::before
-        background-color: #FFCB00
-        border-color: #FFEEAB
+  input:active + span::before
+    background-color: #FFCB00
+    border-color: #FFEEAB
 
-    &:focus
-      + span::before
-        box-shadow: 0 0 0 2px #FFEEAB
+  input:focus + span::before
+    box-shadow: 0 0 0 2px #FFEEAB
 
-      &:not(:checked) + span::before
-        border-color: #D6D6D6
+  input:not(:checked) + span::before
+    border-color: #D6D6D6
 
-    &:checked + span::before
-      border-color: #D6D6D6
-      background-color: #FFCB00
+  input:checked + span::before
+    border-color: #D6D6D6
+    background-color: #FFCB00
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e")
 
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e")
-
-    &:disabled + span::before
-      background-color: #e9ecef
+  input:disabled + span::before
+    background-color: #e9ecef
 
 .custom-radio
   > input
